--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>Boid</title>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="pixi.min.js"></script>
 
